# recall-app

./: .gitignore  README.md  package-lock.json  package.json
scripts/: export_embedding_onnx.py  export_requirements.txt  requirements-model-export.txt
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  db.rs  embedding.rs  main.rs  state.rs
