[package]
name = "recall"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tauri = { version = "2.5.2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
cpal = { version = "0.15", features = ["jack"] }
hound = "3.5"
tempfile = "3.10"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"
base64 = "0.22"
serde_with = "3.11.0"
ndarray = "0.15"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
